# mprpc

./: CMakeLists.txt  README.md
example/: user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc
src/include/: logger.h  logqueue.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.proto
